--- a/random-quote-generator-basic/asset/css/style.css
+++ b/random-quote-generator-basic/asset/css/style.css
@@ -13,51 +13,73 @@ html, body {
 }
 
 h1 {
-    font-size: 35px;
+    font-size: 40px;
     font-weight: 300;
     text-transform: uppercase;
-    background: #017EDA;
-    width: 50%;
+    background: #1B95E0;
     margin: auto;
     padding: 5px 10px;
     color: #FFF;
+    box-shadow: 10px 0px 0px #1B95E0, -10px 0px 0px #1B95E0;
+    display: inline;
 }
 
 .container {
-    width: 50%;
+    width: 60%;
     margin: auto;
     text-align: center;
 }
 
 blockquote {
     text-align: left;
+    height: 280px;
+    margin: 30px 0;
 }
 
 #quote {
-    background: #017EDA;
+    background: #1B95E0;
     line-height: 55px;
     color: #FFF;
     font-size: 30px;
     text-transform: uppercase;
     display: inline;
-    box-shadow: 10px 0px 0px #017EDA, -10px 0px 0px #017EDA;
+    box-shadow: 10px 0px 0px #1B95E0, -10px 0px 0px #1B95E0;
     padding: 3px;
 }
 
 blockquote p {
-    background: #017EDA;
+    background: #1B95E0;
     padding: 5px 10px;
     color: #FFF;
     font-size: 20px;
     display: inline-block;
     margin: 20px;
 }
+
 #newquote {
     font-family: 'Pathway Gothic One', sans-serif;
     font-size: 25px;
-    background: #FFF;
-    border: 1px solid #FFF;
+    background: #1B95E0;
+    border: 1px solid #1B95E0;
     padding: 5px 20px;
-    text-align: center;
+    color: #FFF;
+    border-radius: 5px;
+    margin: 20px;
+    text-transform: uppercase;
 }
 
+#newquote:hover {
+    background: #017EDA;
+}
+
+.share {}
+
+@media only screen and (max-width: 768px){
+.container {
+    width: 80%;
+}
+
+blockquote {
+    height: 100%;
+}
+}
