--- a/local-weather-app-basic/asset/css/style.css
+++ b/local-weather-app-basic/asset/css/style.css
@@ -1,8 +1,26 @@
-body {    
+html, body {    
     font-family: 'Hind', sans-serif;
     font-weight: 300;
-    height: 100%;
     color: #333;
+    height: 100%;
+
+    
+}
+
+.flexbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+   
+}
+
+.container {
+    text-align: center;
+    width: 38%;
+    border-left: 3px solid #333;
+    border-right: 3px solid #333;
+    padding: 20px;
 }
 
 p {
@@ -24,23 +42,10 @@ p {
       cursor: pointer;
 }
 
-a {
-    text-decoration: none;
-    color: #333;
-}
-
 .imp {
     font-size: 50px;
 }
 
-.container {
-    text-align: center;
-    width: 38%;
-    margin: 0 auto;
-    border-left: 3px solid #333;
-    border-right: 3px solid #333;
-    padding: 20px;
-}
 
 @media screen and (max-width: 768px) {
     .container {
