--- a/random-quote-generator-basic/asset/css/style.css
+++ b/random-quote-generator-basic/asset/css/style.css
@@ -72,7 +72,22 @@ blockquote p {
     background: #017EDA;
 }
 
-.share {}
+a {
+    font-family: 'Pathway Gothic One', sans-serif;
+    font-size: 25px;
+    background: #1B95E0;
+    border: 1px solid #1B95E0;
+    padding: 5px 20px;
+    color: #FFF;
+    border-radius: 5px;
+    margin: 20px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+a:hover {
+    background: #017EDA;
+}
 
 @media only screen and (max-width: 768px){
 .container {
