--- a/javascript-calculator/asset/css/style.css
+++ b/javascript-calculator/asset/css/style.css
@@ -36,6 +36,9 @@ background: linear-gradient(to right, #5691c8, #457fca);  /* Chrome 10-25, Safar
     margin: 5px;
     margin-bottom: 15px;
     font-family: 'Audiowide', cursive;
+    width: 290px;
+    height: 90px;
+    overflow: hidden;
 }
 
 #display h1{
@@ -44,9 +47,9 @@ background: linear-gradient(to right, #5691c8, #457fca);  /* Chrome 10-25, Safar
     margin: 0;
 }
 
-#display p{
-    padding: 10px;
-    margin: 0;
+#progress{
+    margin: 5px 5px;
+    padding: 5px 10px;
 }
 
 .container {
@@ -58,6 +61,7 @@ background: linear-gradient(to right, #5691c8, #457fca);  /* Chrome 10-25, Safar
 .row {
     margin: auto;
     margin-top: 10px;
+    display:inline-block;
 }
 
 button {
@@ -82,15 +86,18 @@ button:active {
     top: 2px;
 }
 
+#btn0, #allClear {
+    width: 138px;
+}
+
 #allClear {
     background: #F3014D;
     color: #FFF;
     border: 1px solid #BB003C;
     box-shadow: 0px 2px 0px #BB003C;
-    
 }
 
-#allClear:active {
+#allClear:active{
     box-shadow: 0px 0px 0px #BB003C;
 
 }
