--- a/pomodoro-clock/asset/css/style.css
+++ b/pomodoro-clock/asset/css/style.css
@@ -13,6 +13,13 @@ h1 {
   font-weight: 100;
 }
 
+.status {
+  font-family: 'Monoton', cursive;
+  color: #fe0002;
+  font-size: 35px;
+  font-weight: 100;
+}
+
 #displayTime {
   margin: 20px;
   font-family: 'Orbitron', sans-serif;
