--- a/tic-tac-toe/asset/css/style.css
+++ b/tic-tac-toe/asset/css/style.css
@@ -36,6 +36,10 @@ body {
   color: #777;
 }
 
+#pickPlayer div h2:hover {
+  color: #777;
+}
+
 #restartGame {
   margin-top: -20px;
   color: #8B0000;
@@ -45,11 +49,6 @@ body {
   color: #CE3434;
 }
 
-#selection h3 {
-  margin: 0;
-  padding: 0;
-  font-size: 25px;
-}
 #container {
   margin: 0 auto;
   padding: 0;
